Rough draft for small-scale done

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -13,7 +13,7 @@
 
 @misc{nettools,
   title={\texttt{net-tools}},
-  author={Eckenfels B, Blundell P},
+  author={Eckenfels B and Blundell P},
   howpublished = "\url{https://wiki.linuxfoundation.org/networking/net-tools}",
 }
 
