--- a/paper/nettools.tex
+++ b/paper/nettools.tex
@@ -1,5 +1,5 @@
 \subsection{\texttt{net-tools}}
-The second group of small utilities that we tested was the net-tools suite. We tested 11 utilities and found that 5 (45.5 \%) crashed. Error return codes from \texttt{malloc} caused all crashes. Listing \ref{lst:net-tools} shows the programs in the net-tools and Listing \ref{lst:net-tools_crashes} the crashes.
+The \texttt{net-tools} suite includes a number of small utilities that form the base of the networking distribution for Linux \cite{nettools}. We hypothesized that \texttt{net-tools} would also yield a significant number of crashes, as some of the utilities in it have been deprecated in favor of the \texttt{ip} utility. We tested 11 utilities and found that 5 (45.5 \%) crashed (listing \ref{lst:net-tools}. \texttt{malloc} was the source of all  the crashes. A more detailed investigation into the root cause of some of these crashes is given in appendix \ref{appendix:net-tools}.
 
 \begin{lstlisting}[label={lst:net-tools_crashes},caption={Crashes in net-tools}]
 dnsdomaniname (malloc)	ifconfig (malloc)	ipmaddr (malloc)	netstat (malloc)
