--- a/paper/small_scale.tex
+++ b/paper/small_scale.tex
@@ -1,7 +1,45 @@
-For small-scale utilities, we wrapped the calls listed in listing \ref{lst:small_scale_wrappers}.
+A significant portion of the programs tested were considered to be ``small-scale'', which, although a somewhat arbitrary distinction, helped in reasoning about our results. Although some of the programs in this group are substantial in terms of lines of code, e.g. \texttt{gcc}, they are all command line programs, and most if not all of them should be familiar to the average systems programmer.
 
-\begin{lstlisting}[label={lst:small_scale_wrappers},caption={Wrapped calls for testing small-scale utilities}]
+For small-scale utilities, we wrapped the calls listed in table \ref{lst:small_scale_wrappers}. The machine used was running RedHat Enterprise Linux version XX.YY. The program versions are given in table \ref{tab:small_scale_versions}. For each wrapped call, all of the utilities were run 1000 times in order to cover many possible call patterns.
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{ |c|c|c| }
+\hline
+% http://tex.stackexchange.com/questions/254019/how-can-i-only-make-table-headers-center-and-bold
+\multicolumn{1}{|c|}{\textbf{Program}} & \multicolumn{1}{|c|}{\textbf{Project}} & \multicolumn{1}{c|}{\textbf{Version}} \\
+\hline
+\em{(all)} & coreutils  & 8.25 \\ 
+\hline
+\em{(all)} & net-tools & 1.60 \\
+\hline
+ctags&GNU Emacs & 24.5.1 \\
+finger&Linux NetKit  & 0.17 \\
+grep & GNU grep & 2.25 \\
+gunzip & gzip & 1.6 \\
+gzip & gzip & 1.6 \\
+ip&iproute2 & 4.3.0 \\
+last & util-linux & 2.27.1 \\
+make & GNU make & 4.2 \\
+man & man & 2.7.5 \\
+sdiff&diffutils & 3.3 \\
+ssh&OpenSSH & 7.2 \\
+tar&GNU tar & 1.28 \\
+unzip&Info-Zip  & 6.0 \\
+w&procps-ng & 3.3.10 \\
+zipinfo&Info-Zip & 3.0 \\
+zip&Info-Zip & 3.0 \\
+\hline
+\end{tabular}
+\caption{Versions of the small-scale utilities tested}
+\label{tab:small_scale_versions}
+\end{center}
+\end{table}
+
+\PreTable
+\begin{lstlisting}[captionpos=b, label={lst:small_scale_wrappers},caption={Wrapped calls for testing small-scale utilities}]
 calloc  creat   execv   fork    malloc  opendir pipe    pthread_create 	realloc
 close   execvp  fopen   fstat   mmap    open    poll    pthread_mutex	read    
 write
 \end{lstlisting}
+\PostTable
