--- a/paper/small_scale.tex
+++ b/paper/small_scale.tex
@@ -7,7 +7,7 @@ For small-scale utilities, we wrapped the calls listed in table \ref{lst:small_s
 \begin{tabular}{ |c|c|c| }
 \hline
 % http://tex.stackexchange.com/questions/254019/how-can-i-only-make-table-headers-center-and-bold
-\multicolumn{1}{|c|}{\textbf{Program}} & \multicolumn{1}{|c|}{\textbf{Project}} & \multicolumn{1}{c|}{\textbf{Version}} \\
+\multicolumn{1}{|c|}{\textbf{Program(s)}} & \multicolumn{1}{|c|}{\textbf{Project}} & \multicolumn{1}{c|}{\textbf{Version}} \\
 \hline
 \em{(all)} & coreutils  & 8.25 \\ 
 \hline
