add discussion, conclusion

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -79,7 +79,11 @@ We used fuzz testing methods to investigate the robustness of various Linux appl
 \section{Anecdotes}
 \input{anecdotes}
 
+\section{Discussion}
+\input{discussion}
+
 \section{Conclusion}
+\input{conclusion}
 
 \bibliographystyle{unsrt}
 \bibliography{citations}
