add c highlighting to appendices

--- a/paper/nettools_appendix.tex
+++ b/paper/nettools_appendix.tex
@@ -3,7 +3,7 @@
 
 \texttt{netstat}, which prints a variety of network information, crashed when \texttt{malloc} returned an error. The error, shown in listing \ref{lst:inet.c}, was among the simplest to fix.
 
-\begin{lstlisting}[label={lst:inet.c},firstnumber=213, caption={\texttt{lib/inet.c}}]
+\begin{lstlisting}[label={lst:inet.c},firstnumber=213, caption={\texttt{lib/inet.c}}, language=C]
     pn = (struct add	r *) malloc(sizeof(struct addr));
 +   if (pn == NULL) {
 +   	perror("netstat");
