tweaks to citations

--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -37,10 +37,30 @@
 }
 
 @techreport{bart,
-  title={Fuzz revisited: A re-examination of the reliability of UNIX utilities and services},
+  title={Fuzz revisited: A re-examination of the reliability of {UNIX} utilities and services},
   author={Miller, Barton P and Koski, David and Lee, Cjin Pheow and Maganty, Vivekananda and Murthy, Ravi and Natarajan, Ajitkumar and Steidl, Jeff},
-  year={1995},
+  year=1995,
   institution={Technical report}
+}
+
+@article{bartoriginal,
+  title={An empirical study of the reliability of {UNIX} utilities},
+  author={Miller, Barton P and Fredriksen, Louis and So, Bryan},
+  journal={Communications of the ACM},
+  volume=33,
+  number=12,
+  pages={32--44},
+  year=1990,
+  publisher={ACM}
+}
+
+@inproceedings{dyninst,
+  title={Fine-grained dynamic instrumentation of commodity operating system kernels},
+  author={Tamches, Ariel and Miller, Barton P},
+  booktitle={OSDI},
+  volume={99},
+  pages={117--130},
+  year={1999}
 }
 
 @manual{preload,
@@ -50,8 +70,8 @@
 }
 
 @manual{glibman,
-	title={GLib 2.50.2 Reference Manaual},
-	year="2014",
+	title={GLib 2.50.2 Reference Manual},
+	year=2014,
 }
 
 @misc{glibsource,
