--- a/paper/largescale.tex
+++ b/paper/largescale.tex
@@ -29,7 +29,7 @@ One difficulty in testing large-scale applications is determining the set of beh
 
 The results of our tests display a variety of behaviors across the applications that we tested. For the calls tested, every application (with the exception of VirtualBox) crashed for at least one call. Of the applications that crashed, every one (with the exception of gcc) crashed for more than one call. Of the 37 distinct crashes we encountered for these applications, 15 were caused by core dumps and 22 by hangs. This suggests that these applications are slightly more resilient to errors that would lead to core dumps. 
 
-When we first started testing large-scale applications we encountered core dumps for nearly every application for many calls. There was no obvious signs that these core dumps were caused by aborts, but with some investigation we determined that this was the case. Many of these aborts were caused by the GLib library on the application's behalf. GLib is collection of low-level system libraries developed mainly for the GNOME project. These libraries implement a variety of commonly used data structures, string manipulation functions, and a thread package (built on \texttt{pthread}) \cite{glibman}. We found that for applications that are window-based, nearly all of them used GLib to aid in window management. An investigation of the GLib source \cite{glibsource} reveals that after being passed through a number of internal functions, an erroneous return value was eventually passed to the \texttt{g\_error} function, which prints an error message and aborts the program. This use of GLib helps explains why large-scale applications are more resilient to core dumps over hangs. It also displays some of the difficulty that can arise when determining if a application truly crashed during testing. Finally, it shows that one way to avoid crashes in applications is for one group to get the code right once and then share it with other developers.
+When we first started testing large-scale applications we encountered core dumps for nearly every application for many calls. There was no obvious signs that these core dumps were caused by aborts, but with some investigation we determined that this was the case. Many of these aborts were caused by the GLib library on the application's behalf. GLib is collection of low-level system libraries developed mainly for the GNOME project. These libraries implement a variety of commonly used data structures, string manipulation functions, and a thread package (built on \texttt{pthread}) \cite{glibman}. We found that for applications that are window-based, nearly all of them used GLib to aid in window management. An investigation of the current GLib source reveals that after being passed through a number of internal functions, an erroneous return value was eventually passed to the \texttt{g\_error} function, which prints an error message and aborts the program. This use of GLib helps explains why large-scale applications are more resilient to core dumps over hangs. It also displays some of the difficulty that can arise when determining if a application truly crashed during testing. Finally, it shows that one way to avoid crashes in applications is for one group to get the code right once and then share it with other developers.
 
 
 
