--- a/paper/syscall_freqs.tex
+++ b/paper/syscall_freqs.tex
@@ -1,5 +1,5 @@
 \subsection{System Call Invocation Frequencies}
-To determine what calls we should test, we used strace and ltrace to monitor library and system calls, respectively. We ran the calls listed in tables on small command-line utilities that we felt represented a realistic workload, given in tables \ref{lst:coreutils}, \ref{lst:net-tools}, and \ref{lst:other_utilities} (excluding man and ssh). Histograms of the system call counts and library call counts are shown in figures \ref{fig:sys_counts} and \ref{fig:lib_counts}, respectively. We were unable to test some calls because they do not return any value (e.g. free). Other frequently made calls were discarded because they were not conducive to library interposition. Finally, still others were we felt were unlikely to be called by application code. \\
+To determine what calls we should test, we used strace and ltrace to monitor library and system calls, respectively. We ran the small-scale utilities listed in tables \ref{lst:coreutils}, \ref{lst:net-tools}, and \ref{lst:other_utilities} (excluding man and ssh), which we felt represented a realistic workload. Bar charts showing the system call counts and library call counts are shown in figures \ref{fig:sys_counts} and \ref{fig:lib_counts}, respectively. We were unable to generate wrappers for some calls because they do not return any value (e.g. free). Other frequently made calls were discarded because they were not conducive to library interposition. Finally, still others which appeared frequently in the strace/ltrace logs were false positives, due to the many calls which occur before the actual program code begins executing (e.g. mmap). \\
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{sys_counts}
